--- a/vignettes/Rcpi-quickref.Rmd
+++ b/vignettes/Rcpi-quickref.Rmd
@@ -3,10 +3,13 @@ title: "Rcpi Quick Reference Card"
 author: "Nan Xiao <<https://nanx.me>>"
 date: "`r Sys.Date()`"
 output:
-  rmarkdown::html_vignette:
+  rmarkdown::html_document:
     toc: true
+    toc_float: true
+    toc_depth: 4
     number_sections: true
-    css: Rcpi.css
+    highlight: "textmate"
+    css: "custom.css"
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{Rcpi Quick Reference Card}
